# picknik-hackathon-2023

./: .gitignore  README.md
scripts/: source_pddlstream.bash
src/: README.md
src/apriltag_ros_msgs/: package.xml
src/apriltag_ros_python/: README.md  setup.cfg  setup.py
src/apriltag_ros_python/launch/: apriltag_detection_client.launch.py  apriltag_detection_server.launch.py
src/apriltag_ros_python/src/apriltag_ros_python/: apriltag_detection_server.py
src/doc/: 01_installing_moveit_studio.md  02_creating_objectives.md  03_configuration_packages.md  04_custom_behaviors.md  05_calling_external_services.md  06_moveit_task_constructor.md  07_running_objectives_from_python.md
src/get_block_sorting_plan/: CMakeLists.txt  behavior_plugin.yaml  get_block_sorting_plan_plugin_description.xml  package.xml
src/get_block_sorting_plan/config/: tree_nodes_model.xml
src/get_block_sorting_plan/include/get_block_sorting_plan/: get_block_sorting_plan.hpp
src/get_block_sorting_plan/src/: get_block_sorting_plan.cpp  register_behaviors.cpp
src/get_block_sorting_plan/test/: CMakeLists.txt  test_behavior_plugins.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/apriltag_ros_msgs/share/apriltag_ros_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/apriltag_ros_python/lib/apriltag_ros_python/: apriltag_detection_client  apriltag_detection_server
src/install/apriltag_ros_python/share/apriltag_ros_python/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/offset_pose/share/offset_pose/: local_setup.dsv  (+7 more)
src/install/ur_gazebo_config/share/ur_gazebo_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/ur_gazebo_config/share/ur_gazebo_config/description/: ur5e_gazebo.xacro  ur5e_with_scene_camera_gazebo.xacro
src/log/: latest_build
src/loop_task/: CMakeLists.txt  behavior_plugin.yaml  loop_plugin_description.xml  package.xml
src/loop_task/config/: tree_nodes_model.xml
src/loop_task/include/loop_task/: loop_task.hpp
src/loop_task/src/: loop_task.cpp  register_behaviors.cpp
src/loop_task/test/: test_behavior_plugins.cpp
src/solution_get_apriltag_detection_pose/: get_apriltag_detection_pose_plugin_description.xml
src/solution_get_apriltag_detection_pose/test/: CMakeLists.txt
src/solution_offset_pose/include/offset_pose/: offset_pose.hpp
src/solution_offset_pose/src/: register_behaviors.cpp
src/solution_offset_pose/test/: CMakeLists.txt
src/solution_setup_mtc_pick_from_pose/: package.xml
src/solution_setup_mtc_pick_from_pose/config/: tree_nodes_model.xml
src/solution_setup_mtc_pick_from_pose/src/: register_behaviors.cpp
src/solution_setup_mtc_pick_from_pose/test/: CMakeLists.txt
src/src/apriltag_ros_msgs/: CMakeLists.txt
src/src/apriltag_ros_python/: package.xml
src/src/apriltag_ros_python/src/apriltag_ros_python/: apriltag_detection_client.py
src/src/solution_get_apriltag_detection_pose/: CMakeLists.txt  behavior_plugin.yaml
src/src/solution_get_apriltag_detection_pose/config/: tree_nodes_model.xml
src/src/solution_get_apriltag_detection_pose/include/get_apriltag_detection_pose/: get_apriltag_detection_pose.hpp
src/src/solution_get_apriltag_detection_pose/src/: get_apriltag_detection_pose.cpp  register_behaviors.cpp
src/src/solution_get_apriltag_detection_pose/test/: test_behavior_plugins.cpp
src/src/solution_offset_pose/: CMakeLists.txt  behavior_plugin.yaml
src/src/solution_offset_pose/src/: offset_pose.cpp
src/src/solution_offset_pose/test/: test_behavior_plugins.cpp
src/src/solution_setup_mtc_pick_from_pose/: CMakeLists.txt  behavior_plugin.yaml  setup_mtc_pick_from_pose_plugin_description.xml
src/src/solution_setup_mtc_pick_from_pose/include/setup_mtc_pick_from_pose/: setup_mtc_pick_from_pose.hpp
src/src/solution_setup_mtc_pick_from_pose/src/: setup_mtc_pick_from_pose.cpp
src/src/solution_setup_mtc_pick_from_pose/test/: test_behavior_plugins.cpp
src/src/ur_base_config/config/: base_config.yaml
src/src/ur_base_config/description/: gripper_and_camera.xacro
src/src/ur_base_config/objectives/: cycle_between_waypoints.xml  solution_pick_object_using_pose.xml
src/src/ur_gazebo_config/config/: wrist_camera.yaml
src/src/ur_gazebo_config/waypoints/: waypoints.yaml
src/src/ur_hardware_config/: CMakeLists.txt
src/src/ur_hardware_config/calibration/: kinematic_calibration.yaml
src/src/ur_hardware_config/config/: site_config.yaml
src/src/ur_hardware_config/description/: picknik_007_ur5e.xacro
src/src/ur_site_config/: CMakeLists.txt  package.xml
src/src/ur_site_config/config/: site_config.yaml
src/starter_files/: CMakeLists.txt  copy_files.sh  package.xml  start_moveit_setup_assistant.sh
src/starter_files/config/: base_config.yaml
src/starter_files/launch/: hardware.launch.py
src/tamp/: CMakeLists.txt  package.xml  setup.py
src/tamp/domains/: domain.pddl
src/tamp/examples/: hackathon_planner.py
src/tamp/launch/: hackathon_planner.launch.py
src/tamp_msgs/: CMakeLists.txt  package.xml
src/tamp_msgs/msg/: PickPlaceAction.msg  PickPlacePlan.msg
src/tamp_msgs/srv/: PlanBlockSorting.srv
src/ur_base_config/: README.md  package.xml
src/ur_base_config/description/: ur5e.xacro
src/ur_base_config/objectives/: pick_from_pose.xml  pick_from_pose_config.yaml  solution_detect_april_tag_pose_and_pick_object.xml  solution_pick_apriltag_annotated_object.xml
src/ur_gazebo_config/: CMakeLists.txt  README.md
src/ur_gazebo_config/config/: SOLUTION_site_config.yaml  site_config.yaml
src/ur_gazebo_config/description/simulation_worlds/: space_station_blocks_world.sdf
src/ur_gazebo_config/launch/sim/: hardware_sim_cameras_apriltag.launch.py
src/ur_hardware_config/: package.xml
src/ur_hardware_config/config/moveit/: picknik_007_ur5e.srdf
src/ur_hardware_config/launch/: bringup.launch.py
src/ur_hardware_config/test/: test_parse_site_config.py  test_waypoint_yaml_validation.py
src/ur_site_config/: README.md
(+98 files in other folders)
