<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>starter_files</name>
  <version>1.0.0</version>
  <description>
    URDF description and other starter files for a UR5e in MoveIt Studio
  </description>

  <author>Sebastian Castro</author>
  <author>Chance Cardona</author>

  <maintainer email="studio.maintainers@picknik.ai">MoveIt Studio Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
