<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_ros_python</name>
  <version>1.0.0</version>
  <description>Python nodes to perform AprilTag detection.</description>

  <maintainer email="sebastian.castro@picknik.ai">Sebastian Castro</maintainer>
  <author email="sebastian.castro@picknik.ai">Sebastian Castro</author>

  <license>BSD 3-Clause</license>

  <depend>apriltag_ros_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
